[gd_scene load_steps=35 format=3 uid="uid://kgnlgltrpr3d"]

[ext_resource type="Script" path="res://game/game.gd" id="1_33em8"]
[ext_resource type="Theme" uid="uid://vxs3lu15fk42" path="res://ui/theme.tres" id="1_bgo03"]
[ext_resource type="Script" path="res://game/turret/turret_selection.gd" id="2_6iqjx"]
[ext_resource type="PackedScene" uid="uid://u4cq125gjdyc" path="res://game/item/slot/item_slot.tscn" id="2_7gne5"]
[ext_resource type="Theme" uid="uid://cvi5bb6plsvpo" path="res://ui/numeric_theme.tres" id="2_l1uk2"]
[ext_resource type="Script" path="res://game/turret/builder/build_button.gd" id="2_xtpje"]
[ext_resource type="Script" path="res://game/game_variable/health/health.gd" id="3_al0pa"]
[ext_resource type="Texture2D" uid="uid://o4oybkbdydle" path="res://game/game_variable/health/heart.png" id="4_h4x8a"]
[ext_resource type="PackedScene" uid="uid://beybo0dft6401" path="res://game/item/slot/trash_slot.tscn" id="5_7ufwh"]
[ext_resource type="Script" path="res://game/game_variable/gold/gold.gd" id="5_l3b8w"]
[ext_resource type="Texture2D" uid="uid://cds0h7bm6y7xd" path="res://game/game_variable/gold/gold.png" id="6_h6anp"]
[ext_resource type="Script" path="res://game/map.gd" id="6_q555l"]
[ext_resource type="Script" path="res://game/turret/builder/CursorFollower.gd" id="7"]
[ext_resource type="Script" path="res://game/game_variable/wave_count/wave_count.gd" id="9_hd4ur"]
[ext_resource type="Resource" uid="uid://d0c2l34ye5exs" path="res://game/wave/waves/waves.tres" id="10_06msr"]
[ext_resource type="PackedScene" path="res://ui/button.tscn" id="10_87wuu"]
[ext_resource type="Script" path="res://game/turret/sell_button.gd" id="11_ic726"]
[ext_resource type="Script" path="res://game/item/slot/inventory.gd" id="12_n6huo"]
[ext_resource type="Texture2D" uid="uid://cp82nxufomsbb" path="res://game/game_variable/wave_count/wave.png" id="14_1xlua"]
[ext_resource type="PackedScene" uid="uid://cglt2cpwbw18l" path="res://game/item/slot/item_stack_display.tscn" id="14_egtcl"]
[ext_resource type="Script" path="res://game/tooltip.gd" id="17_ksa57"]
[ext_resource type="Texture2D" uid="uid://ciwuh3sef01fi" path="res://ui/button_normal.png" id="17_mys5v"]
[ext_resource type="Script" path="res://game/turret/builder/builder.gd" id="17_ym512"]
[ext_resource type="PackedScene" uid="uid://oc6d2nkw7s8t" path="res://game/item/slot/sale_slot.tscn" id="21_im3vc"]
[ext_resource type="Script" path="res://game/reroll_button.gd" id="25_wvaa8"]
[ext_resource type="Script" path="res://game/shop/shop.gd" id="26_vbd8u"]
[ext_resource type="Script" path="res://game/shop/sale_group.gd" id="27_8cc0t"]
[ext_resource type="Resource" uid="uid://cfppywih3gcbw" path="res://game/shop/weapon_group.tres" id="27_nd8dp"]
[ext_resource type="Resource" uid="uid://didmqxopakdha" path="res://game/shop/ammunition_group.tres" id="28_37ekd"]
[ext_resource type="Resource" uid="uid://cv232h008kuso" path="res://game/shop/accessory_group.tres" id="29_xmi0p"]
[ext_resource type="PackedScene" uid="uid://dmvf3axbf7hmd" path="res://game/game_end/game_end.tscn" id="31_5ue8y"]
[ext_resource type="Script" path="res://audio/music/music_loader.gd" id="32_otw54"]
[ext_resource type="AudioStream" uid="uid://b6dsaqhgrhy04" path="res://game/game.wav" id="33_relkb"]

[sub_resource type="Resource" id="Resource_1u1m7"]
script = ExtResource("27_8cc0t")
sales = Array[Resource("res://game/shop/sellable.gd")]([ExtResource("27_nd8dp"), ExtResource("28_37ekd"), ExtResource("29_xmi0p")])
availibility = 1.0

[node name="Game" type="Node"]
script = ExtResource("1_33em8")

[node name="Map" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_q555l")

[node name="StoneCanvas" type="CanvasLayer" parent="."]

[node name="ProjectileCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="TurretCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="DamageEffectCanvas" type="CanvasLayer" parent="."]

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UICanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource("1_bgo03")

[node name="WaveDescription" type="Label" parent="UICanvas/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UICanvas/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UICanvas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Health" type="RichTextLabel" parent="UICanvas/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_l1uk2")
bbcode_enabled = true
text = "HEALTH"
fit_content = true
scroll_active = false
script = ExtResource("3_al0pa")
value = 50
icon = ExtResource("4_h4x8a")
color = Color(1, 0.305882, 0.305882, 1)

[node name="Gold" type="RichTextLabel" parent="UICanvas/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_l1uk2")
bbcode_enabled = true
text = "GOLD"
fit_content = true
scroll_active = false
script = ExtResource("5_l3b8w")
value = 50
icon = ExtResource("6_h6anp")
color = Color(1, 0.85098, 0.541176, 1)

[node name="BuildButton" parent="UICanvas/MarginContainer/VBoxContainer" instance=ExtResource("10_87wuu")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "BUILD_TURRET"
script = ExtResource("2_xtpje")

[node name="SelectedLabel" type="Label" parent="UICanvas/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bgo03")
text = "INVENTORY_SELECTED"

[node name="HBoxContainer2" type="HBoxContainer" parent="UICanvas/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SlotContainer" type="HBoxContainer" parent="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2" groups=["turret_item_slot_container"]]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_horizontal = 0

[node name="SellButton" parent="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("10_87wuu")]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "SELL_TURRET"
script = ExtResource("11_ic726")

[node name="InventoryLabel" type="Label" parent="UICanvas/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bgo03")
text = "INVENTORY"

[node name="Inventory" type="GridContainer" parent="UICanvas/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
columns = 4
script = ExtResource("12_n6huo")

[node name="ItemSlot" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot2" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot3" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot4" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot5" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot6" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
visible = false
layout_mode = 2

[node name="ItemSlot7" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot8" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot9" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot10" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot11" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot12" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot13" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot14" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot15" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="ItemSlot16" parent="UICanvas/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("2_7gne5")]
layout_mode = 2

[node name="TrashSlot" parent="UICanvas/MarginContainer/VBoxContainer" instance=ExtResource("5_7ufwh")]
layout_mode = 2

[node name="ShopLabel" type="Label" parent="UICanvas/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bgo03")
text = "SHOP"

[node name="RerollButton" parent="UICanvas/MarginContainer/VBoxContainer" instance=ExtResource("10_87wuu")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "REROLL"
script = ExtResource("25_wvaa8")

[node name="Shop" type="GridContainer" parent="UICanvas/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/v_separation = 8
columns = 4
script = ExtResource("26_vbd8u")
sales = SubResource("Resource_1u1m7")

[node name="SaleSlot" parent="UICanvas/MarginContainer/VBoxContainer/Shop" instance=ExtResource("21_im3vc")]
layout_mode = 2

[node name="SaleSlot2" parent="UICanvas/MarginContainer/VBoxContainer/Shop" instance=ExtResource("21_im3vc")]
layout_mode = 2

[node name="SaleSlot3" parent="UICanvas/MarginContainer/VBoxContainer/Shop" instance=ExtResource("21_im3vc")]
layout_mode = 2

[node name="SaleSlot4" parent="UICanvas/MarginContainer/VBoxContainer/Shop" instance=ExtResource("21_im3vc")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UICanvas/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="WaveCount" type="RichTextLabel" parent="UICanvas/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_l1uk2")
bbcode_enabled = true
text = "WAVE"
fit_content = true
scroll_active = false
script = ExtResource("9_hd4ur")
waves = ExtResource("10_06msr")
icon = ExtResource("14_1xlua")
color = Color(1, 0.952941, 0.764706, 1)

[node name="NextWaveButton" parent="UICanvas/MarginContainer/VBoxContainer2" instance=ExtResource("10_87wuu")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "NEXT_WAVE"

[node name="TurretSelection" type="Control" parent="UICanvas" groups=["turret_selection"]]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("2_6iqjx")

[node name="CursorCanvas" type="CanvasLayer" parent="."]
layer = 5

[node name="CursorFollower" type="Node2D" parent="CursorCanvas"]
position = Vector2(-16, -16)
script = ExtResource("7")

[node name="ItemStackDisplay" parent="CursorCanvas/CursorFollower" groups=["item_cursor"] instance=ExtResource("14_egtcl")]
offset_left = 0.0
offset_top = 0.0
offset_right = 16.0
offset_bottom = 16.0

[node name="Builder" type="Node2D" parent="CursorCanvas/CursorFollower"]
unique_name_in_owner = true
script = ExtResource("17_ym512")

[node name="Tooltip" type="NinePatchRect" parent="CursorCanvas/CursorFollower"]
unique_name_in_owner = true
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_bgo03")
texture = ExtResource("17_mys5v")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource("17_ksa57")

[node name="MarginContainer" type="MarginContainer" parent="CursorCanvas/CursorFollower/Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_bgo03")
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CursorCanvas/CursorFollower/Tooltip/MarginContainer"]
clip_contents = false
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_bgo03")
bbcode_enabled = true
scroll_active = false

[node name="GameEnd" parent="." instance=ExtResource("31_5ue8y")]
unique_name_in_owner = true

[node name="MusicLoader" type="Node" parent="."]
script = ExtResource("32_otw54")
music = ExtResource("33_relkb")

[connection signal="mouse_entered" from="UICanvas/MarginContainer/VBoxContainer/BuildButton" to="UICanvas/MarginContainer/VBoxContainer/BuildButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UICanvas/MarginContainer/VBoxContainer/BuildButton" to="UICanvas/MarginContainer/VBoxContainer/BuildButton" method="_on_mouse_exited"]
[connection signal="pressed" from="UICanvas/MarginContainer/VBoxContainer/BuildButton" to="CursorCanvas/CursorFollower/Builder" method="_on_build_button_pressed"]
[connection signal="mouse_entered" from="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2/SellButton" to="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2/SellButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2/SellButton" to="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2/SellButton" method="_on_mouse_exited"]
[connection signal="pressed" from="UICanvas/MarginContainer/VBoxContainer/HBoxContainer2/SellButton" to="UICanvas/TurretSelection" method="_on_sell_button_pressed"]
[connection signal="mouse_entered" from="UICanvas/MarginContainer/VBoxContainer/RerollButton" to="UICanvas/MarginContainer/VBoxContainer/RerollButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UICanvas/MarginContainer/VBoxContainer/RerollButton" to="UICanvas/MarginContainer/VBoxContainer/RerollButton" method="_on_mouse_exited"]
[connection signal="pressed" from="UICanvas/MarginContainer/VBoxContainer/RerollButton" to="UICanvas/MarginContainer/VBoxContainer/Shop" method="reroll_with_price"]
[connection signal="pressed" from="UICanvas/MarginContainer/VBoxContainer2/NextWaveButton" to="Map" method="next_wave"]
[connection signal="finished" from="CursorCanvas/CursorFollower/Tooltip/MarginContainer/RichTextLabel" to="CursorCanvas/CursorFollower/Tooltip" method="update_tooltip_size"]
